--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ body {
     margin-bottom: 20px;
 }
 
-.contributions, .engine-section {
+.contributions {
     text-align: left;
     margin-top: 20px;
 }
@@ -118,6 +118,11 @@ img.contribution-img {
     padding-bottom: 4px;
 }
 
+.subsection h4 {
+    text-align: left;
+    margin-top: 20px;
+}
+
 .back-link {
     margin-top: 20px;
 }
@@ -152,12 +157,14 @@ img.contribution-img {
 
 .slider-image {
     width: 100%;
+    max-width: 100%;
     max-height: 400px;
     display: block;
     position: absolute;
     top: 0;
     left: 0;
     object-fit: cover;
+    border: 6px solid #000;
 }
 
 .slider-image:first-child {
